fix: remove z-index property

--- a/assets/stylesheets/framework/_sidebar.scss
+++ b/assets/stylesheets/framework/_sidebar.scss
@@ -127,7 +127,6 @@
 }
 
 .sidebar__nav-toggle--expanded {
-  z-index: $z-sidebar;
 
   svg {
     transform: rotate(90deg);
